# dap

./: .clang-format  .clang-tidy  .ycm_extra_conf.py  .ycm_extra_conf.py.orig  CMakeLists.txt  README.md  build_dependencies.py  clang_tidy_line_filters.json  run_clang_tidy.py  run_tidy.sh
CMakeModules/: DapGtestLinkLibraries.cmake
iwyu_mappings/: iwyu.imp
src/: CMakeLists.txt  dap_audio_test.h  dap_gtest.h
src/audioio/: AudioBusFactory.cpp  AudioBusFactory.h  AudioDeviceList.cpp  AudioDeviceList.h  CMakeLists.txt  IAudioBus.h  IAudioDevice.h  IAudioProcess.h  NullAudioProcess.cpp  Scope.h
src/audioio/coreaudio/: AudioDevice.cpp  AudioDevice.h  AudioDeviceListener.cpp  AudioDeviceListener.h  AudioInput.cpp  AudioInput.h  AudioOutput.cpp  AudioOutput.h  AudioUtilities.cpp  AudioUtilities.h
src/audioio/test/: AudioInputTest.cpp  AudioOutputTest.cpp  AudioProcessTest.cpp  CMakeLists.txt  PassThroughAudioProcess.cpp  PassThroughAudioProcess.h
src/base/: AbstractFactory.h  Any.h  CMakeLists.txt  Constants.h  ContainerView.h  KeyValueTuple.h  Semaphore.cpp  Semaphore.h  Streamable.h  SystemAnnotations.h  SystemCommon.h  Thread.h  ThreadJoiner.h  TypeTraits.h  VariadicOps.h
src/base/test/: AbstractFactoryTest.cpp  AnyTest.cpp  CMakeLists.txt  TypeTraitsTest.cpp
src/crtp/: CMakeLists.txt
src/crtp/nodes/: CMakeLists.txt  Node.h  Port.h  Processor.h  make_node.h
src/crtp/nodes/private/: BinaryNodeOpsImpl.hpp  UnaryNodeOpsImpl.hpp
src/crtp/nodes/test/: CMakeLists.txt  NodeTest.cpp  NoiseTest.cpp  OscillatorTest.cpp  ProcessorNodeTest.cpp  PwmTest.cpp
src/crtp/ugen_deprecated/: CMakeLists.txt  Mixer.h
src/crtp/ugen_deprecated/test/: CMakeLists.txt  MixerTest.cpp
src/crtp/utility/: CMakeLists.txt  InputNamesPrinter.h  NodeVisitor.h
src/dsp/: AllPass.h  CMakeLists.txt  CombFilter.h  DelayLine.h  FeedbackLine.h  IIRFilter.h  LadderFilter.h  Mixer.h  NoiseGenerator.h  Oscillator.h  OscillatorFunctions.h  Phaser.h  Phasor.h  Pwm.h  PwmFunctions.h  Smoother.h  UniformDistribution.h
src/dsp/test/: CMakeLists.txt  DelayTest.cpp  IIRFilterTest.cpp  MixerTest.cpp  NoiseGeneratorTest.cpp  VarTests.cpp
src/examples/: CMakeLists.txt
src/examples/crtp_synth/: AudioProcess.cpp  AudioProcess.h  CMakeLists.txt  OscEventSystem.cpp  OscEventSystem.h  Synth.cpp  Synth.h  Types.h  main.cpp
src/examples/crtp_synth/benchmark/: CMakeLists.txt  main.cpp
src/examples/readme/: CMakeLists.txt  main.cpp
src/fastmath/: AlignedVector.h  Array.h  ArrayOps.h  AudioBuffer.h  CMakeLists.txt  FastmathAlignedAllocator.h  Function.h  Taylor.h  TypeTraits.h  Var.h  VarArray.h  Variable.h  VariableBinaryExpressions_impl.h  VariableUnaryExpressions_impl.h  array_ops_eigen_impl.h
src/fastmath/test/: ArrayOpsTest.cpp  ArrayTest.cpp  AudioBufferTest.cpp  CMakeLists.txt  FunctionTest.cpp  TaylorTest.cpp  VarArrayTest.cpp  VariableTest.cpp
src/osc/: CMakeLists.txt  OscMessageLogger.cpp  OscMessageLogger.h  OscReceiver.cpp  OscReceiver.h  OscSender.cpp  OscSender.h
src/osc/test/: CMakeLists.txt  OscReceiverTest.cpp
src/osc/util/: CMakeLists.txt  control_sender.cpp
src/threadsafe/: AtomicLock.h  CMakeLists.txt  RingBuffer.h  Stack.h
src/threadsafe/test/: CMakeLists.txt  RingBufferTest.cpp  StackTest.cpp
